--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "if-env": "^1.0.4"
+    "idb": "^7.0.1",
+    "if-env": "^1.0.4",
+    "workbox-sw": "^6.5.3"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
