--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "workbox-sw": "^6.5.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.2",
     "concurrently": "^5.2.0",
     "nodemon": "^2.0.4"
   }
